# policy-sdk-js

./: .gitmodules  CONTRIBUTING.md  Makefile  README.md  package-lock.json  renovate.json
.github/: ci.yml
.github/actions/javy-installer/: action.yml
.github/workflows/: ci.yml  e2e-tests.yml  javy-plugin-e2e.yml  javy-plugin.yml  release-drafter.yml  release.yml
demo_policy/: Makefile  README.md  annotated-policy.wasm  e2e.bats  main.ts  metadata.yml  package-lock.json  package.json  policy_settings.ts  test_scenarios.ts  tsconfig.json  webpack.config.js
demo_policy/test_data/sessions/: can-i-failure.yml  can-i-success.yml  crypto-verify-cert-failure.yml  crypto-verify-cert-success.yml  crypto-verify-cert-success.yml.bak  dns-lookup-success.yml  list-all-resources-failure.yml  list-all-resources-success.yml  list-resources-by-namespace-failure.yml  list-resources-by-namespace-success.yml  namespace-found.yml  namespace-not-found.yml  oci-manifest-and-config-lookup-failure.yml  sigstore-verify-github-actions-failure.yml  (+7 more)
javy-plugin-kubewarden/: Cargo.toml  Makefile  rust-toolchain.toml
javy-plugin-kubewarden/src/: lib.rs
javy-plugin-kubewarden/wit/: world.wit
js/: .gitignore  .prettierrc.js  Makefile  README.md  e2e.bats  eslint.config.js  index.ts  jsdoc.json  main.ts  metadata.yml  package-lock.json  package.json  protocol.ts  replay-session.yml  tsconfig.json  webpack.config.js
js/demo_policy/: README.md  main.ts  policy_settings.ts  test_scenarios.ts
js/kubewarden/: admission.ts  validation.ts
js/plugin/: README.md  javy-plugin-kubewarden.wasm
(+43 files in other folders)
